--- a/sample_config.env
+++ b/sample_config.env
@@ -10,9 +10,12 @@
 # Please read the README to understand each variable values.
 # ----------- REQUIRED ----------- #
 
+# Get these two values from my.telegram.org/apps OR Telegram useTGxBot
 # APP_ID=
 # API_HASH=
+# Create a bot using Telegram @BotFather, and get the Telegram API token.
 # TG_BOT_TOKEN=
+# Create a PyroGram User Session, using https://generatestringsession.spechide.repl.run/
 # TG_USER_SESSION=
 
 # ----------- OPTIONAL VARIABLES ----------- #
@@ -23,7 +26,7 @@
 # TG_MAX_SEL_MESG=
 # TG_MIN_SEL_MESG=
 
-# ----------- CUSTOM COMMANDS ----------- #
+# ----------- CUSTOM STRINGS ----------- #
 
 # START_MESSAGE=
 # BEGINNING_DEL_ALL_MESSAGE=
@@ -31,7 +34,7 @@
 # BEGINNING_SEL_DEL_MESSAGE=
 # NOT_USED_DEL_FROM_DEL_TO_MESSAGE=
 
-# ----------- CUSTOM STRINGS ----------- #
+# ----------- CUSTOM COMMANDS ----------- #
 
 # START_COMMAND=
 # DEL_ALL_COMMAND=
