--- a/sample_config.env
+++ b/sample_config.env
@@ -25,6 +25,8 @@
 # LOG_FILE_ZZGEVC=
 # TG_MAX_SEL_MESG=
 # TG_MIN_SEL_MESG=
+# SHTL_USR_HCAT_QO=
+# SHTL_BOT_HCAT_QO
 
 # ----------- CUSTOM STRINGS ----------- #
 
