--- a/sample_config.env
+++ b/sample_config.env
@@ -22,11 +22,12 @@
 
 # TG_BOT_SESSION=
 # TG_BOT_WORKERS=
+# TG_SLEEP_THRESHOLD=
 # LOG_FILE_ZZGEVC=
 # TG_MAX_SEL_MESG=
 # TG_MIN_SEL_MESG=
 # SHTL_USR_HCAT_QO=
-# SHTL_BOT_HCAT_QO
+# SHTL_BOT_HCAT_QO=
 
 # ----------- CUSTOM STRINGS ----------- #
 
