--- a/sample_config.env
+++ b/sample_config.env
@@ -36,6 +36,7 @@
 # IN_CORRECT_PERMISSIONS_MESSAGE=
 # BEGINNING_SEL_DEL_MESSAGE=
 # NOT_USED_DEL_FROM_DEL_TO_MESSAGE=
+# THANK_YOU_MESSAGE=
 
 # ----------- CUSTOM COMMANDS ----------- #
 
