--- a/app.json
+++ b/app.json
@@ -26,7 +26,7 @@
             "description": "Obtain a Telegram bot token by contacting @BotFather"
         },
         "TG_USER_SESSION": {
-            "description": "Create a PyroGram User Session, using https://generatestringsession.spechide.repl.run/"
+            "description": "Create a PyroGram User Session, using https://t.me/useTGxBot"
         }
     },
     "buildpacks": [{
